RIVS-121 - fixed cli history scrollbar

--- a/src/webviews/src/modules/cli/components/cli-history/styles.module.scss
+++ b/src/webviews/src/modules/cli/components/cli-history/styles.module.scss
@@ -1,3 +1,9 @@
+.historyWrapper {
+  overflow-y: auto;
+  height: 100vh;
+  width: 100%;
+}
+
 .cliItem {
   display: flex;
   align-items: center;
